<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/menu1" >
        <menu >
            <item android:title="@string/list"
                android:id="@+id/main_menu_sigle_list"/>
            <item android:title="@string/add"
                android:id="@+id/main_menu_sigle_add"/>
            <item android:title="@string/del"
                android:id="@+id/main_menu_sigle_del"/>
        </menu>
    </item>
    <item android:title="@string/menu2" >
        <menu >
            <item android:title="@string/list"
                android:id="@+id/main_menu_module_list"/>
            <item android:title="@string/list_recycler"
                android:id="@+id/main_menu_module_list_recycler"/>
            <item android:title="@string/add"
                android:id="@+id/main_menu_module_add"/>
            <item android:title="@string/del"
                android:id="@+id/main_menu_module_del"/>
        </menu>
    </item>
    <item android:title="@string/menu3" >
        <menu >
            <item android:title="@string/listbase"
                android:id="@+id/main_menu_module_sql_list"/>
            <item android:title="@string/add"
                android:id="@+id/main_menu_module_sql_add"/>
            <item android:title="@string/del"
                android:id="@+id/main_menu_module_sql_del"/>
        </menu>
    </item>
</menu>